fixed overflow issue

--- a/css/announcement_bar.css
+++ b/css/announcement_bar.css
@@ -2,7 +2,8 @@
 body{
     margin: 0;
     padding: 0;
-    width: 100%;
+    /* width: 100%; */
+    overflow: hidden;
 }
 
 #hellobar-bar {
